lab1/Test/L1-A-4-42.cmm
{
  struct yNWxcs1t9 WsaRZXYeZx [ 1689091960 ] = m , 
    ;
}Xcrv4PqA1m1a_Oe8 
;
int iCjQZfjHjGdurvtyY ( float x3Ex2vZ1A7 ) {
  if AWw6ETgzJnY )   HYvkd974A9b0CbhlQZa ;
else   if ( y70h )   cX1BchBFctTPS_tjXCcV 548350236.381982643 
    ;


. }
struct VG {
  int Nl3 ;
}fF52o [ 304472561 ] [ 716072345 ] [ 1850560079 ] 
  , VDcYqrK0p [ 1012291937 ] ko7bh1QoqQ0VW 


;
